[package]
name          = "btdht"
version       = "1.0.0"
description   = "Implementation of the bittorrent mainline DHT"
authors       = ["Andrew <amiller4421@gmail.com>", "Adam Cigánek <adam.ciganek@gmail.com>"]
license       = "MIT/Apache-2.0"
edition       = "2021"

[dependencies]
async-trait   = "0.1.83"
crc32c        = "0.6.8"
futures-util  = { version = "0.3.31", default-features = false, features = ["alloc"] }
log           = "0.4.22"
rand          = "0.8.5"
# FIXME: serde >= 1.0.181 breaks some tests. Pinning to 1.0.180 for now.
serde         = { version = "=1.0.180", features = ["derive"] }
serde_bencode = { package = "torrust-serde-bencode", version = "0.2.3" }
serde_bytes   = "0.11.15"
sha-1         = "0.10.1"
tokio         = { version = "1.32", default-features = false, features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
thiserror     = "1.0.64"

[dev-dependencies]
hex           = "0.4.3"
pretty_env_logger = "0.5.0"
tokio         = { version = "1.40.0", features = ["io-std", "io-util"] }
test-log      = "0.2.14"
