[package]
name          = "bip_dht"
version       = "0.6.0"
description   = "Implementation of the bittorrent mainline DHT"

authors       = ["Andrew <amiller4421@gmail.com>"]

homepage      = "https://github.com/GGist/bip-rs"
repository    = "https://github.com/GGist/bip-rs/tree/master/bip_dht"
documentation = "https://docs.rs/bip_dht/"

keywords      = ["dht", "distributed", "hash", "mainline", "bittorrent"]

license       = "MIT/Apache-2.0"

edition        = "2018"

[dependencies]
bip_bencode   = { version = "0.2.0" }
crc           = "1.2.0"
log           = "0.4.14"
mio           = "0.5.0"
rand          = "0.8.4"
sha-1         = "0.9.8"
thiserror     = "1.0.30"

[dev-dependencies]
pretty_env_logger = "0.4"

